@@ -10,8 +10,8 @@ Version 0.07
 
 Reads XML and makes it available via DBI.
 
-Sadly DBD::AnyData doesn't work with the latest DBI and DBD::AnyData2 isn't
-out yet, so I am writing this pending the publication of DBD::AnyData2
+Sadly, DBD::AnyData doesn't work with the latest DBI,
+and DBD::AnyData2 isn't out yet, so I am writing this pending the publication of DBD::AnyData2.
 
 DBD-XMLSimple doesn't yet expect to support complex XML data, so that's why
 it's not called DBD-XML.
@@ -33,7 +33,7 @@ Input data will be something like this:
     <table>
         <row id="1">
             <name>Nigel Horne</name>
-            <email>njh@bandsman.co.uk</email>
+            <email>njh@nigelhorne.com</email>
         </row>
         <row id="2">
             <name>A N Other</name>
@@ -41,13 +41,14 @@ Input data will be something like this:
         </row>
     </table>
 
-If a leaf appears twice it will be concatenated
+If a leaf appears twice,
+it will be concatenated.
 
     <?xml version="1.0" encoding="US-ASCII"?>
     <table>
         <row id="1">
             <name>Nigel Horne</name>
-            <email>njh@bandsman.co.uk</email>
+            <email>njh@nigelhorne.com</email>
             <email>nhorne@pause.org</email>
         </row>
     </table>
@@ -56,7 +57,7 @@ If a leaf appears twice it will be concatenated
     $sth->execute();
     $sth->dump_results();
 
-    Gives the output "njh@bandsman.co.uk,nhorne@pause.org"
+    Gives the output "njh@nigelhorne.com,nhorne@pause.org"
 
 # SUBROUTINES/METHODS
 
@@ -66,7 +67,7 @@ No routines in this module should be called directly by the application.
 
 # AUTHOR
 
-Nigel Horne, `<njh at bandsman.co.uk>`
+Nigel Horne, `<njh at nigelhorne.com>`
 
 # BUGS
 
@@ -96,6 +97,6 @@ You can also look for information at:
 
 # LICENCE AND COPYRIGHT
 
-Copyright 2016-2024 Nigel Horne.
+Copyright 2016-2025 Nigel Horne.
 
 This program is released under the following licence: GPL
