@@ -17,8 +17,8 @@ Version 0.07
 
 Reads XML and makes it available via DBI.
 
-Sadly DBD::AnyData doesn't work with the latest DBI and DBD::AnyData2 isn't
-out yet, so I am writing this pending the publication of DBD::AnyData2
+Sadly, DBD::AnyData doesn't work with the latest DBI,
+and DBD::AnyData2 isn't out yet, so I am writing this pending the publication of DBD::AnyData2.
 
 DBD-XMLSimple doesn't yet expect to support complex XML data, so that's why
 it's not called DBD-XML.
@@ -48,7 +48,8 @@ Input data will be something like this:
 	</row>
     </table>
 
-If a leaf appears twice it will be concatenated
+If a leaf appears twice,
+it will be concatenated.
 
     <?xml version="1.0" encoding="US-ASCII"?>
     <table>
@@ -180,36 +181,57 @@ sub open_table($$$$$)
 	}
 
 	my $root = $twig->root;
-	my %table;
-	my $rows = 0;
-	my %col_nums;
-	my @col_names;
-	foreach my $record($root->children()) {
-		my %row;
-		my $index = 0;
-		foreach my $leaf($record->children) {
-			my $key = $leaf->name();
-			$row{$key} .= ',' if($row{$key});
-			$row{$key} .= $leaf->field();
-			if(!exists($col_nums{$key})) {
-				$col_nums{$key} = $index++;
-				push @col_names, $key;
-			}
+	my @records = $root->children();
+
+	carp 'No rows found under <table>' if !@records;
+
+	my @rows;
+	my %colnames_seen;
+
+	# First pass — discover columns across all rows
+	for my $record (@records) {
+		for my $leaf ($record->children) {
+			my $name = $leaf->name;
+			$colnames_seen{$name}++;
 		}
-		$table{data}->{$record->att('id')} = \%row;
-		$rows++;
+		# Also include 'id'
+		if (defined(my $id = $record->att('id'))) {
+			$colnames_seen{id}++;
+		}
 	}
 
-	carp 'No data found to import' if($rows == 0);
-	carp "Can't determine column names" if(scalar(@col_names) == 0);
+	my @col_names = sort keys %colnames_seen;
+	my %col_nums  = map { $col_names[$_] => $_ } 0 .. $#col_names;
 
-	$data->{'rows'} = $rows;
+	# Second pass — save row values
+	for my $record (@records) {
+		my %rowhash;
 
-	$table{'table_name'} = $tname;
-	$table{'col_names'} = \@col_names;
-	$table{'col_nums'} = \%col_nums;
+		# Include id if present
+		if (defined(my $id = $record->att('id'))) {
+			$rowhash{id} = $id;
+		}
 
-	return DBD::XMLSimple::Table->new($data, \%table);
+		for my $leaf ($record->children) {
+			my $key = $leaf->name;
+			if (defined $rowhash{$key}) {
+				$rowhash{$key} .= "," . $leaf->field();
+			} else {
+				$rowhash{$key} = $leaf->field();
+			}
+		}
+
+		# Now produce array in canonical column order
+		my @row = map { $rowhash{$_} } @col_names;
+		push @rows, \@row;
+	}
+
+	$data->{col_names} = \@col_names;
+	$data->{col_nums}  = \%col_nums;
+	$data->{rows} = \@rows;
+	$data->{row_count} = scalar @rows;
+
+	return DBD::XMLSimple::Table->new($data, $data);
 }
 
 package DBD::XMLSimple::Table;
@@ -227,6 +249,10 @@ sub new
 	$attr->{readonly} = 1;
 	$attr->{cursor} = 0;
 
+	$attr->{rows} = $data->{rows};
+	$attr->{col_names}= $data->{col_names};
+	$attr->{col_nums} = $data->{col_nums};
+
 	my $rc = $class->SUPER::new($data, $attr, $flags);
 
 	$rc->{col_names} = $attr->{col_names};
@@ -238,15 +264,13 @@ sub fetch_row($$)
 {
 	my($self, $data) = @_;
 
-	if($self->{'cursor'} >= $data->{'rows'}) {
-		return;
+	if($self->{'cursor'} >= $data->{'row_count'}) {
+		return undef;
 	}
-	$self->{'cursor'}++;
 
-	my @fields = map { $self->{'data'}->{$self->{'cursor'}}->{$_ } } @{$self->{'col_names'}};
-	$self->{'row'} = \@fields;
-
-	return $self->{'row'};
+	my $rowref = $self->{rows}->[$self->{cursor}++];
+	$self->{row} = $rowref;
+	return $rowref;
 }
 
 sub seek($$$$)
@@ -326,7 +350,7 @@ L<http://search.cpan.org/dist/DBD-XMLSimple/>
 
 =head1 LICENCE AND COPYRIGHT
 
-Copyright 2016-2024 Nigel Horne.
+Copyright 2016-2025 Nigel Horne.
 
 This program is released under the following licence: GPL
 
